--- a/rst.css
+++ b/rst.css
@@ -59,19 +59,25 @@ body{
   align-items: center;
   position: relative; 
   text-transform: uppercase;
-  font-size: 26px;
-  font-weight: 700;
+  font-size: 10px;
+  font-weight: 300;
 }
 
-.logo .fa-bolt {
+.logo rt {
   color: #fed700;
-  font-size: 19.5px;
+  font-size: 11.5px;
   position: absolute; 
+  font-family:cursive;
   top: 60%;
   left: 100%; 
   transform: translate(-50%, -50%); 
   z-index: 1; 
   display: flex;
+  transform: rotate(-25deg);
+}
+
+.logo rt:hover{
+  color: #202020;
 }
 .profile-text span{
 
@@ -79,12 +85,15 @@ body{
 }
 
 
-.signature {
+/* .signature {
   width: 110px; 
   height:95px; 
   margin-right: 10px; 
   /* transform: rotate(-90deg); */
-}
+
+ */
+
+
 
 .header ul li:first-child {
   margin-right: auto; 
